core/platform/minio/templates/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-gateway
spec:
  hosts:
  - <path:kv/data/ingress/hosts#minio-gateway>
  gateways:
  - system-ingress/gateway
  http:
  - route:
    - destination:
        host: minio.minio.svc.cluster.local
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: <path:kv/data/ingress/hosts#outline>
      allowMethods:
      - GET
      - POST
      allowCredentials: false
      maxAge: "24h"
